--- a/House Price/Multiple Linear Regression.ipynb
+++ b/House Price/Multiple Linear Regression.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -118,7 +110,7 @@
        "4      5108            B  2208         6          4  victorian  1101539"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,10 +153,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>1.269e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 04 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sun, 08 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>08:48:39</td>     <th>  Log-Likelihood:    </th> <td> -84517.</td> \n",
+       "  <th>Time:</th>                 <td>04:22:19</td>     <th>  Log-Likelihood:    </th> <td> -84517.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  6028</td>      <th>  AIC:               </th> <td>1.690e+05</td>\n",
@@ -213,8 +205,8 @@
        "Dep. Variable:                  price   R-squared:                       0.678\n",
        "Model:                            OLS   Adj. R-squared:                  0.678\n",
        "Method:                 Least Squares   F-statistic:                 1.269e+04\n",
-       "Date:                Wed, 04 Nov 2020   Prob (F-statistic):               0.00\n",
-       "Time:                        08:48:39   Log-Likelihood:                -84517.\n",
+       "Date:                Sun, 08 Nov 2020   Prob (F-statistic):               0.00\n",
+       "Time:                        04:22:19   Log-Likelihood:                -84517.\n",
        "No. Observations:                6028   AIC:                         1.690e+05\n",
        "Df Residuals:                    6026   BIC:                         1.691e+05\n",
        "Df Model:                           1                                         \n",
@@ -238,7 +230,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,10 +262,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7116.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 04 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sun, 08 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>08:48:47</td>     <th>  Log-Likelihood:    </th> <td> -85583.</td> \n",
+       "  <th>Time:</th>                 <td>04:22:19</td>     <th>  Log-Likelihood:    </th> <td> -85583.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  6028</td>      <th>  AIC:               </th> <td>1.712e+05</td>\n",
@@ -322,8 +314,8 @@
        "Dep. Variable:                  price   R-squared:                       0.541\n",
        "Model:                            OLS   Adj. R-squared:                  0.541\n",
        "Method:                 Least Squares   F-statistic:                     7116.\n",
-       "Date:                Wed, 04 Nov 2020   Prob (F-statistic):               0.00\n",
-       "Time:                        08:48:47   Log-Likelihood:                -85583.\n",
+       "Date:                Sun, 08 Nov 2020   Prob (F-statistic):               0.00\n",
+       "Time:                        04:22:19   Log-Likelihood:                -85583.\n",
        "No. Observations:                6028   AIC:                         1.712e+05\n",
        "Df Residuals:                    6026   BIC:                         1.712e+05\n",
        "Df Model:                           1                                         \n",
@@ -345,7 +337,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -377,10 +369,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7446.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 04 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sun, 08 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>08:48:53</td>     <th>  Log-Likelihood:    </th> <td> -85509.</td> \n",
+       "  <th>Time:</th>                 <td>04:22:20</td>     <th>  Log-Likelihood:    </th> <td> -85509.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  6028</td>      <th>  AIC:               </th> <td>1.710e+05</td>\n",
@@ -429,8 +421,8 @@
        "Dep. Variable:                  price   R-squared:                       0.553\n",
        "Model:                            OLS   Adj. R-squared:                  0.553\n",
        "Method:                 Least Squares   F-statistic:                     7446.\n",
-       "Date:                Wed, 04 Nov 2020   Prob (F-statistic):               0.00\n",
-       "Time:                        08:48:53   Log-Likelihood:                -85509.\n",
+       "Date:                Sun, 08 Nov 2020   Prob (F-statistic):               0.00\n",
+       "Time:                        04:22:20   Log-Likelihood:                -85509.\n",
        "No. Observations:                6028   AIC:                         1.710e+05\n",
        "Df Residuals:                    6026   BIC:                         1.710e+05\n",
        "Df Model:                           1                                         \n",
@@ -452,7 +444,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,8 +465,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -491,10 +485,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   4230.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 04 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sun, 08 Nov 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>08:51:06</td>     <th>  Log-Likelihood:    </th> <td> -84517.</td> \n",
+       "  <th>Time:</th>                 <td>04:22:21</td>     <th>  Log-Likelihood:    </th> <td> -84517.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  6028</td>      <th>  AIC:               </th> <td>1.690e+05</td>\n",
@@ -549,8 +543,8 @@
        "Dep. Variable:                  price   R-squared:                       0.678\n",
        "Model:                            OLS   Adj. R-squared:                  0.678\n",
        "Method:                 Least Squares   F-statistic:                     4230.\n",
-       "Date:                Wed, 04 Nov 2020   Prob (F-statistic):               0.00\n",
-       "Time:                        08:51:06   Log-Likelihood:                -84517.\n",
+       "Date:                Sun, 08 Nov 2020   Prob (F-statistic):               0.00\n",
+       "Time:                        04:22:21   Log-Likelihood:                -84517.\n",
        "No. Observations:                6028   AIC:                         1.690e+05\n",
        "Df Residuals:                    6024   BIC:                         1.691e+05\n",
        "Df Model:                           3                                         \n",
@@ -576,7 +570,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,6 +579,36 @@
     "mlr = sm.OLS(df['price'], df[['intercept','area','bathrooms','bedrooms']])\n",
     "results_mlr = mlr.fit()\n",
     "results_mlr.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['intercept','bathrooms','bedrooms','area']]\n",
+    "Y = df['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 10072.10704673,   7345.3917137 ,  -2925.80632467,    345.91101884])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(np.dot(np.linalg.inv(np.dot(X.transpose(),X)),X.transpose()),Y)"
    ]
   },
   {
